# wellbeing

./: .env.example  .gitignore  AGENT_TOOL_INTEGRATION_COMPLETE.md  CHAINLIT_DEPLOYMENT.md  CHANGELOG.md  CITATION_VERIFIER_IMPROVEMENTS.md  CONNECTION_TIMEOUT_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.bat  DEPLOY_TO_HUGGINGFACE.bat  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  FUNCTIONAL_TOOLS_SUMMARY.md  HADITH_API_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PERMANENT_DEPLOYMENT_STEPS.md  PRIVATE_DEPLOYMENT_GUIDE.md  PUSH_TO_GITHUB.bat  Procfile  QUICK_START_VERIFICATION.md  README.md  README_HF.md  SETUP_INSTRUCTIONS.md  SHARE_WITH_NGROK.md  START_CHAINLIT.bat  START_HERE.md  START_PRIVATE.bat  TOOLS_REFERENCE_CARD.md  TOOL_EXECUTION_IMPLEMENTATION.md  USAGE.md  VERIFICATION_TOOLS_GUIDE.md  WEBSOCKET_FIX_GUIDE.md  WEBSOCKET_TIMEOUT_FIX.md  chainlit.md  chainlit_app.py  chainlit_app_with_auth.py  complete_push.ps1  debug_env.py  debug_hadith_api.py  (+23 more)
.chainlit/: config.toml
.claude/: settings.local.json
examples/: agent_integration_example.py
src/academic_debate_council/: chat_interface.py  crew.py  direct_agents.py  direct_chat_agents.py  main.py  realtime_chat_executor.py  realtime_monitor.py  simple_realtime.py  streaming_handler.py  streamlit_app.py
src/academic_debate_council/config/: agents.yaml  tasks.yaml
src/academic_debate_council/tools/: __init__.py  citation_verifier.py  fact_checker.py  islamic_texts.py
